# LearningHumanoidWalking

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  LICENSE.md  README.md  RESEARCH_LOG.md  eval_cartpole.py  pyproject.toml  run_experiment.py
.claude/skills/eval/: SKILL.md
.claude/skills/experiment/: SKILL.md
.claude/skills/train/: SKILL.md
.githooks/: pre-commit
.github/workflows/: lint.yml  tests.yml
envs/: __init__.py
envs/cartpole/: __init__.py  cartpole.xml  cartpole_env.py
envs/common/: base_humanoid_env.py  config_builder.py  domain_randomization.py  marker_drawer.py  mujoco_env.py  robot_interface.py  utils.py
envs/h1/: __init__.py  gen_xml.py  h1_base.py  h1_env.py  h1_mimic.py  h1_walk.py  mimic_reference.py
envs/h1/configs/: base.yaml  mimic.yaml  walk.yaml
envs/jvrc/: __init__.py  gen_xml.py  jvrc_base.py  jvrc_step.py  jvrc_walk.py  robot.py
envs/jvrc/configs/: base.yaml
models/: __init__.py
rl/algos/: imitation.py  ppo.py
rl/distributions/: __init__.py  beta.py  gaussian.py
rl/envs/: __init__.py  normalize.py  vectorize.py  vectorized_env.py  wrappers.py
rl/policies/: __init__.py  actor.py  base.py  critic.py
rl/storage/: rollout_storage.py
rl/utils/: __init__.py  checkpointer.py  eval.py  logger.py  seeding.py
rl/workers/: __init__.py  rollout_worker.py
robots/: robot_base.py
scripts/: benchmark_training.py  debug_stepper.py  plot_logs.py  test_contact_behavior.py
tasks/: __init__.py  base_task.py  mimic_task.py  observations.py  rewards.py  standing_task.py  stepping_task.py  walking_task.py
tests/: conftest.py  test_determinism.py  test_environments.py  test_evaluation.py  test_imitation.py  test_training.py
trained/: jvrc_stepper.pt
trained/jvrc_stepper/: actor.pt  critic.pt  experiment.pkl
utils/: footstep_plans.txt
