[project]
name = "learninghumanoidwalking"
version = "0.1.0"
description = "Training a humanoid robot for locomotion using Reinforcement Learning"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
dependencies = [
    "dm-control>=1.0.24",
    "imageio[ffmpeg]>=2.37.0",
    "intel-openmp>=2025.2.1",
    "mujoco==3.2.2",
    "ray==2.40.0",
    "tensorboard>=2.20.0",
    "torch==2.5.1",
    "transforms3d>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl", "envs", "tasks", "robots"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:launch_testing -p no:launch_ros"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
