[project]
name = "learninghumanoidwalking"
version = "0.1.0"
description = "Training a humanoid robot for locomotion using Reinforcement Learning"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.10"
dependencies = [
    "dm-control>=1.0.24",
    "imageio[ffmpeg]>=2.37.0",
    "intel-openmp>=2025.2.1",
    "mujoco==3.4.0",
    "ray==2.40.0",
    "tensorboard>=2.20.0",
    "torch==2.5.1",
    "transforms3d>=0.4.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl", "envs", "tasks", "robots"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:launch_testing -p no:launch_ros"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    ".idea",
    ".mypy_cache",
    ".tox",
    ".venv",
    "third_party",
    "models",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
    "TC004",  # type-checking block rules
    "TC005",  # type-checking block rules
]
ignore = [
    "E731",   # lambda assignment
    "SIM102", # nested if
    "SIM108", # ternary operator
]

[tool.ruff.lint.isort]
known-first-party = ["rl", "envs", "tasks", "robots"]
